--- a/index.html
+++ b/index.html
@@ -3,10 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HappyBills - Next-Gen Billing Platform</title>
+    <title>HappyBills - Simple Food Business Billing Software | Restaurant POS System</title>
+    <meta name="description" content="HappyBills is the leading food business billing software for restaurants, cafes, and food trucks. Generate bills, manage menus, track sales with GST compliance. Download now!">
+    <meta name="keywords" content="happy bills, happybills, food billing software, restaurant billing, cafe billing, food truck billing, GST billing, menu management, restaurant POS">
+    <meta name="author" content="HappyBills">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://happybills.com/">
+    <meta property="og:title" content="HappyBills - Simple Food Business Billing Software">
+    <meta property="og:description" content="Create and manage bills for your food business with ease. Perfect for restaurants, cafes, food trucks, and home kitchens.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://happybills.com/">
+    <meta property="og:image" content="https://happybills.com/assets/app-logo.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="HappyBills - Simple Food Business Billing Software">
+    <meta name="twitter:description" content="Create and manage bills for your food business with ease. Perfect for restaurants, cafes, food trucks, and home kitchens.">
+    <meta name="twitter:image" content="https://happybills.com/assets/app-logo.png">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="assets/app-logo.png">
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "SoftwareApplication",
+        "name": "HappyBills",
+        "description": "Simple food business billing software for restaurants, cafes, and food trucks",
+        "url": "https://happybills.com",
+        "applicationCategory": "BusinessApplication",
+        "operatingSystem": "Android, Web",
+        "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "INR"
+        },
+        "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "4.8",
+            "ratingCount": "1000"
+        }
+    }
+    </script>
 </head>
 <body>
     <header class="header">
