--- a/subscription.html
+++ b/subscription.html
@@ -218,7 +218,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <script>
         // const API_HOST = 'https://beneficently-impolite-fernanda.ngrok-free.dev';
-        const API_HOST = 'http://localhost:3000';
+        const API_HOST = 'https://happybills.in';
         const API_ENDPOINT = '/api/v1/master/plans';
 
         async function loadPlans() {
