Added privacy policy

--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,7 @@
                         <li><a href="index.html" class="nav-link">Home</a></li>
                         <li><a href="subscription.html" class="nav-link">Plans</a></li>
                         <li><a href="contact.html" class="nav-link active">Contact</a></li>
+                        <li><a href="privacy.html" class="nav-link">Privacy</a></li>
                     </ul>
                     <button class="login-btn" onclick="openLogin()">Login</button>
                 </div>
@@ -53,25 +54,25 @@
                             <div class="contact-item">
                                 <div class="contact-icon gradient-bg-1">📧</div>
                                 <div class="contact-details">
-                                    <h4>Enterprise Sales</h4>
-                                    <p>enterprise@happybills.com</p>
-                                    <span class="response-time">Response within 2 hours</span>
+                                    <h4>Support Email</h4>
+                                    <p>thehappybills@gmail.com</p>
+                                    <span class="response-time">Response within 24 hours</span>
                                 </div>
                             </div>
                             <div class="contact-item">
                                 <div class="contact-icon gradient-bg-2">📞</div>
                                 <div class="contact-details">
-                                    <h4>24/7 Support Hotline</h4>
-                                    <p>+1 (800) 555-BILLS</p>
-                                    <span class="response-time">Available 24/7</span>
+                                    <h4>Support Phone</h4>
+                                    <p>+919791899921</p>
+                                    <span class="response-time">Mon-Fri 9AM-6PM IST</span>
                                 </div>
                             </div>
                             <div class="contact-item">
-                                <div class="contact-icon gradient-bg-3">🏢</div>
+                                <div class="contact-icon gradient-bg-3">🌐</div>
                                 <div class="contact-details">
-                                    <h4>Global Headquarters</h4>
-                                    <p>500 Enterprise Plaza, Suite 2000<br>San Francisco, CA 94105</p>
-                                    <span class="response-time">Mon-Fri 9AM-6PM PST</span>
+                                    <h4>Website</h4>
+                                    <p>www.happybills.in</p>
+                                    <span class="response-time">Visit for more info</span>
                                 </div>
                             </div>
                         </div>
@@ -200,10 +201,15 @@
                         <a href="#">Careers</a>
                         <a href="#">Press</a>
                     </div>
+                    <div class="link-group">
+                        <h4>Legal</h4>
+                        <a href="privacy.html">Privacy Policy</a>
+                        <a href="privacy.html">Terms of Service</a>
+                    </div>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 HappyBills. All rights reserved.</p>
+                <p>&copy; 2025 HappyBills. All rights reserved.</p>
                 <div class="compliance-badges">
                     <span class="badge">SOC 2</span>
                     <span class="badge">ISO 27001</span>
