--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                         <li><a href="index.html" class="nav-link active">Home</a></li>
                         <li><a href="subscription.html" class="nav-link">Plans</a></li>
                         <li><a href="contact.html" class="nav-link">Contact</a></li>
+                        <li><a href="privacy.html" class="nav-link">Privacy</a></li>
                     </ul>
                     <button class="login-btn" onclick="openLogin()">Login</button>
                 </div>
@@ -218,10 +219,15 @@
                         <a href="#">Careers</a>
                         <a href="#">Press</a>
                     </div>
+                    <div class="link-group">
+                        <h4>Legal</h4>
+                        <a href="privacy.html">Privacy Policy</a>
+                        <a href="privacy.html">Terms of Service</a>
+                    </div>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 HappyBills. All rights reserved.</p>
+                <p>&copy; 2025 HappyBills. All rights reserved.</p>
                 <div class="compliance-badges">
                     <span class="badge">SOC 2</span>
                     <span class="badge">ISO 27001</span>
