Fix contact page issues and added seo

--- a/index.html
+++ b/index.html
@@ -24,6 +24,29 @@
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "HappyBills",
+        "alternateName": "Happy Bills",
+        "url": "https://happybills.com",
+        "logo": "https://happybills.com/assets/app-logo.png",
+        "description": "Simple food business billing software for restaurants, cafes, and food trucks",
+        "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+1-800-555-2455",
+            "contactType": "Customer Service",
+            "availableLanguage": "English",
+            "areaServed": "IN"
+        },
+        "sameAs": [
+            "https://www.facebook.com/happybills",
+            "https://twitter.com/happybills",
+            "https://www.linkedin.com/company/happybills"
+        ]
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
         "@type": "SoftwareApplication",
         "name": "HappyBills",
         "description": "Simple food business billing software for restaurants, cafes, and food trucks",
@@ -72,7 +95,7 @@
             <div class="hero-bg"></div>
             <div class="hero-container">
                 <div class="hero-content">
-                    <div class="hero-badge">🚀 Trusted by 500+ Enterprises</div>
+                    <div class="hero-badge">🚀 Now Available on Google Play | Trusted by 500+ Enterprises</div>
                     <h1 class="hero-title">
                         Simple<br>
                         <span class="gradient-text">Food Billing</span>
@@ -82,9 +105,9 @@
                         Perfect for restaurants, cafes, food trucks, and home kitchens.
                     </p>
                     <div class="hero-cta">
-                        <a href="app-release.apk" class="cta-primary" download>
+                        <a href="https://play.google.com/store/apps/details?id=com.happybills.mobile" class="cta-primary" target="_blank" rel="noopener noreferrer">
                             <img src="assets/app-logo.png" alt="App" class="cta-icon">
-                            <span>Download App</span>
+                            <span>Get it on Google Play</span>
                         </a>
                         <button class="cta-secondary" onclick="watchDemo()">
                             <span class="play-icon">▶</span>
