--- a/recharge.html
+++ b/recharge.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Secure Recharge - HappyBills</title>
+    <title>Secure Recharge - HappyBills Food Billing Software Payment</title>
+    <meta name="description" content="Complete your HappyBills subscription payment securely. Razorpay secured payment gateway for food business billing software plans.">
+    <meta name="keywords" content="happy bills payment, happybills recharge, food billing software payment, secure payment">
+    <meta name="robots" content="noindex, nofollow">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="assets/app-logo.png">
