--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Get support for HappyBills food billing software. Contact our team for restaurant, cafe, and food truck billing solutions. 24/7 support available.">
     <meta name="keywords" content="happy bills contact, happybills support, food billing software help, restaurant billing support">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://happybills.com/contact.html">
+    <link rel="canonical" href="https://happybills.in/contact.html">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="assets/app-logo.png">
