--- a/index.html
+++ b/index.html
@@ -3,33 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HappyBills - Simple Food Business Billing Software | Restaurant POS System</title>
-    <meta name="description" content="HappyBills is the leading food business billing software for restaurants, cafes, and food trucks. Generate bills, manage menus, track sales with GST compliance. Download now!">
-    <meta name="keywords" content="happy bills, happybills, food billing software, restaurant billing, cafe billing, food truck billing, GST billing, menu management, restaurant POS">
+    <title>HappyBills - Free Billing App | Mobile Shop & Restaurant Billing Software Android</title>
+    <meta name="description" content="Free billing app for mobile shops, restaurants, cafes & retail stores. Download HappyBills Android billing software with GST, inventory management & free invoice generator.">
+    <meta name="keywords" content="happy bills, happybills, free billing app, mobile shop billing app, mobile shop billing software, mobile shop billing android, restaurant billing app free, free invoice app, billing software free download, retail billing app, GST billing app free, shop billing software, android billing app, free pos app, invoice generator free, billing app for small business">
     <meta name="author" content="HappyBills">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://happybills.com/">
-    <meta property="og:title" content="HappyBills - Simple Food Business Billing Software">
-    <meta property="og:description" content="Create and manage bills for your food business with ease. Perfect for restaurants, cafes, food trucks, and home kitchens.">
+    <link rel="canonical" href="https://happybills.in/">
+    <meta property="og:title" content="HappyBills - Free Billing App for Mobile Shops & Restaurants">
+    <meta property="og:description" content="Free Android billing software for mobile shops, restaurants & retail stores. GST billing, inventory management & invoice generator.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://happybills.com/">
-    <meta property="og:image" content="https://happybills.com/assets/app-logo.png">
+    <meta property="og:url" content="https://happybills.in/">
+    <meta property="og:image" content="https://happybills.in/assets/app-logo.png">
+    <meta property="og:site_name" content="HappyBills">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="HappyBills - Simple Food Business Billing Software">
-    <meta name="twitter:description" content="Create and manage bills for your food business with ease. Perfect for restaurants, cafes, food trucks, and home kitchens.">
-    <meta name="twitter:image" content="https://happybills.com/assets/app-logo.png">
+    <meta name="twitter:title" content="HappyBills - Free Billing App for Mobile Shops & Restaurants">
+    <meta name="twitter:description" content="Free Android billing software for mobile shops, restaurants & retail stores. GST billing, inventory management & invoice generator.">
+    <meta name="twitter:image" content="https://happybills.in/assets/app-logo.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://happybills.in/assets/app-logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://happybills.in/assets/app-logo.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://happybills.in/assets/app-logo.png">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="assets/app-logo.png">
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
         "@type": "Organization",
         "name": "HappyBills",
         "alternateName": "Happy Bills",
-        "url": "https://happybills.com",
-        "logo": "https://happybills.com/assets/app-logo.png",
-        "description": "Simple food business billing software for restaurants, cafes, and food trucks",
+        "url": "https://happybills.in",
+        "logo": "https://happybills.in/assets/app-logo.png",
+        "image": "https://happybills.in/assets/app-logo.png",
+        "description": "Free billing app for mobile shops, restaurants, cafes, retail stores and small businesses. Android billing software with GST compliance",
+        "address": {
+            "@type": "PostalAddress",
+            "addressCountry": "IN"
+        },
         "contactPoint": {
             "@type": "ContactPoint",
             "telephone": "+1-800-555-2455",
@@ -49,8 +57,9 @@
         "@context": "https://schema.org",
         "@type": "SoftwareApplication",
         "name": "HappyBills",
-        "description": "Simple food business billing software for restaurants, cafes, and food trucks",
-        "url": "https://happybills.com",
+        "description": "Free billing app for mobile shops, restaurants, cafes, retail stores and small businesses. Android billing software with GST compliance",
+        "url": "https://happybills.in",
+        "image": "https://happybills.in/assets/app-logo.png",
         "applicationCategory": "BusinessApplication",
         "operatingSystem": "Android, Web",
         "offers": {
@@ -63,6 +72,45 @@
             "ratingValue": "4.8",
             "ratingCount": "1000"
         }
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "HappyBills",
+        "url": "https://happybills.in",
+        "potentialAction": {
+            "@type": "SearchAction",
+            "target": "https://happybills.in/?s={search_term_string}",
+            "query-input": "required name=search_term_string"
+        }
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+            {
+                "@type": "ListItem",
+                "position": 1,
+                "name": "Home",
+                "item": "https://happybills.in/"
+            },
+            {
+                "@type": "ListItem",
+                "position": 2,
+                "name": "Plans",
+                "item": "https://happybills.in/subscription.html"
+            },
+            {
+                "@type": "ListItem",
+                "position": 3,
+                "name": "Contact",
+                "item": "https://happybills.in/contact.html"
+            }
+        ]
     }
     </script>
 </head>
