--- a/subscription.html
+++ b/subscription.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Choose the perfect HappyBills plan for your food business. Affordable pricing for restaurants, cafes, and food trucks with GST compliance and 24/7 support.">
     <meta name="keywords" content="happy bills pricing, happybills plans, food billing software cost, restaurant billing plans, cafe billing pricing">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://happybills.com/subscription.html">
+    <link rel="canonical" href="https://happybills.in/subscription.html">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="assets/app-logo.png">
